adding css style

--- a/exemples/ch02/todos.html
+++ b/exemples/ch02/todos.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./todos.js"></script>
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>My todos</h1>
-    <div>
+    <div class="todo-form">
       <label for="todo-input">New Todo</label>
-      <input type="text" id="=todo-input" />
+      <input type="text" id="todo-input" />
       <button id="add-todo-input" disabled>Add</button>
     </div>
     <ul id="todos-list"></ul>
