style ul element

--- a/exemples/ch02/todos.html
+++ b/exemples/ch02/todos.html
@@ -14,7 +14,7 @@
     <div class="todo-list-container">
       <div class="todo-form">
         <h1>My todos</h1>
-        <div>
+        <div class="form">
           <label for="todo-input">New Todo</label>
           <input type="text" id="todo-input" />
           <button id="add-btn" disabled>Add</button>
